@@ -38,6 +38,7 @@
             window.fbAsyncInit = function() {
                 FB.init({
                     appId      : opts.appId,
+                    version    : opts.version,
                     channelUrl : opts.channelUrl,
                     status     : true,
                     cookie     : true,
